--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,8 @@
         "framer-motion": "^11.5.4",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.0",
+        "react-query": "^3.39.3",
         "react-router-dom": "^6.26.1",
         "zustand": "^4.5.5"
     },
